Fixed viewport sizing issues on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 :root {
-    --nav-height: min(7vh, 9.5vw);
+    --nav-height: min(7dvh, 9.5dvw);
+    --nav-width: min(95dvw, 10 * var(--nav-height));
 }
 html {
     overflow: hidden;
@@ -11,6 +12,8 @@ body {
     background-size: 100% 100vh;
     background-repeat: no-repeat;
     margin: 0;
+    height: 100dvh;
+    width: 100dvw;
 }
 
 /*Fade Animation*/
@@ -63,10 +66,10 @@ body {
     position: absolute;
     background-color: rgba(200, 200, 200, 0.75);
     border-radius: 3vw;
-    width: 20vw;
+    width: 20dvmax;
     aspect-ratio: 2 / 1;
     bottom: 2vw;
-    left: 78vw;
+    right: 2vw;
     z-index: 200;
     opacity: 0;
 }
@@ -115,9 +118,9 @@ body {
     justify-content: center;
     gap: 3.33%;
     height: var(--nav-height);
-    aspect-ratio: 10 / 1;
-    top: 1vh;
-    left: calc(50vw - 5 * var(--nav-height));
+    width: var(--nav-width);
+    top: 1dvh;
+    left: calc(50dvw - 0.5 * var(--nav-width));
     background-color: teal;
     border-radius: 30px;
     z-index: 10;
@@ -558,7 +561,6 @@ body {
     max-width: 10%;
     max-height: 100%;
     aspect-ratio: 1 / 1;
-    forced-color-adjust: none;
     z-index: 6;
 }
 .proficiencyBar {
